--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -210,9 +210,15 @@ body {
     transition-duration: 0.4s;
     cursor: pointer;
   }
-  
+  .product-button:disabled {
+    background-color: rgb(215, 215, 215);
+    }
+
   .product-button:hover {
     background-color: #45a049;
+  }
+  .product-button:disabled:hover {
+    background-color: rgb(215, 215, 215);
   }
   
   .product-button.added-to-cart {
